# ZPE-Bio

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  MANIFEST.in  Makefile  PROOF_INDEX.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci-python.yml  ci-rust.yml  ci.yml  publish.yml  release-skeleton.yml
.hypothesis/constants/: 8b21051f33d3f31b  ca363bc8d55d4a82
core/rust/: Cargo.toml
core/rust/src/: codec.rs  ffi.rs  lib.rs  quantise.rs  rle.rs
docs/: ARCHITECTURE.md  BIO_WAVE2_EXTERNAL_RESOURCE_LOCK_2026-02-20.md  CI_REQUIRED_CHECKS.md  COORDINATOR_PROMPT_TOUCH_MENTAL_ADDON.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  PRD_BIO_EXTERNAL_BASELINE_AND_FIDELITY_2026-02-20.md  PRD_BIO_WAVE1_RELEASE_REFINEMENT.md  PRD_BIO_WAVE2_BIOSIGNAL_MULTIMODAL_EXECUTION.md  PRD_BIO_WEARABLE_BIOSIGNAL_AUGMENTATION_2026-02-20.md  PRD_REPO_PRODUCTIZATION_BRIEF.md  PRD_ZPE_BIO_MULTIMODAL_AUGMENTATION_BRIEF.md  PRD_ZPE_BIO_TOUCH_MENTAL_ADDON_BRIEF.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK_BIO_Rx_REPRO_FALSIFICATION.md  SESSION_LOG.md  SPEC_CONSTANTS.md  STARTUP_PROMPT_BIO_WAVE1_RELEASE_REFINEMENT.md  STARTUP_PROMPT_BIO_WAVE2_BIOSIGNAL_AGENT.md  STARTUP_PROMPT_BIO_WEARABLE_BIOSIGNAL_AUGMENTATION_AGENT_2026-02-20.md  SUPPORT.md  market_surface.json
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/family/: BIO_COMPATIBILITY_VECTOR.json  BIO_IMC_ALIGNMENT_REPORT.md  BIO_RELEASE_NOTE_FOR_COORDINATION.md
docs/multimodal/: MULTIMODAL_TRANSPLANT_MANIFEST.sha256
docs/regulatory/: BLOCKERS.md  DOC-001_SDP.md  DOC-002_SRS.md  DOC-003_SAD.md  DOC-004_SDD.md  DOC-005_UNIT_VERIFICATION_REPORT.md  DOC-006_INTEGRATION_TEST_REPORT.md  DOC-007_SYSTEM_TEST_REPORT.md  DOC-008_RMF.md  DOC-009_TRACEABILITY_MATRIX.md  DOC-010_CONFIGURATION_MANAGEMENT_PLAN.md  DOC-011_PROBLEM_RESOLUTION_REPORT.md  DOC-012_HUMAN_EQUIVALENCE_GATE_REPORT.md  DOCUMENT_INDEX.md  PATHWAY_DECISION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_PACKAGE_MANIFEST.md
docs/regulatory/evidence/: kappa_compute_template.py
docs/regulatory/templates/: cardiologist_eval_form.md
docs/regulatory/traceability/: REQ_DT_MATRIX.md
docs/specs/: ZPE_BIOSIGNAL_CODEC_PRD_v1.0.md
embedded/nrf5340/: Cargo.toml  memory.x
embedded/nrf5340/.cargo/: config.toml
embedded/nrf5340/src/: main.rs
examples/: README.md  mitdb_compress.py  wfdb_bridge.py
proofs/artifacts/comp_benchmarks/: mitbih_codec_comparison.json  summary.md
python/zpe_bio/: __init__.py  __main__.py  archive_utils.py  bio_wave2.py  cli.py  codec.py  reference_encoder.py  test_codec.py  wearable_wave.py
python/zpe_bio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/zpe_bio/multimodal/: __init__.py
scripts/: benchmark_mitdb.py  benchmark_multimodal.py  benchmark_physionet.py  generate_multimodal_manifest.py  inquest_codec.py  pareto_frontier_mitbih.py  repro_falsification_runner.py  run_bio_wave2_phase6.py  run_bio_wearable_augmentation.py  run_bio_wearable_gatebc_recovery_push.py  run_bio_wearable_gatef_closure.py  run_external_baseline_fidelity.py  run_repro_falsification.sh  verify_multimodal_manifest.py
scripts/comp_benchmark/: run_mitbih_comparison.py
tests/: test_archive_utils.py  test_benchmark_mitdb.py  test_benchmark_physionet.py  test_chemosense_bio_cli.py  test_clean_install.py  test_cli_biosignal_commands.py  test_codec.py  test_deterministic_replay.py  test_eeg_mental_mapping.py  test_multimodal_cli.py  test_multimodal_fusion.py  test_multimodal_mental.py  test_multimodal_smell.py  test_multimodal_stream_ecg_eeg.py  test_multimodal_taste.py  test_multimodal_touch.py  test_packet_compatibility.py  test_parity.py  test_run_bio_wearable_gatef_closure.py  test_wearable_wave.py  test_wfdb_interop.py
tests/fixtures/: wave1_golden_packets.json
validation/benchmarks/: mit_bih_runner.py  phase3_hostok_report.py
validation/datasets/: README.md
validation/destruct_tests/: dt01_shape_destruction.py  dt02_compression_regret.py  dt03_determinism.py  dt04_noise_injection.py  dt05_pathological.py  dt06_ram_budget.py  dt07_latch_freedom.py  dt08_dc_torture.py  dt09_power_regression.py  dt10_latency.py  dt11_formal_spec.py  dt12_monotonicity.py  dt13_cross_platform.py  dt14_side_channel.py  dt15_adaptive_threshold.py  dt16_ppg_codec.py  dt17_packet_framing.py  run_all_dts.py
validation/results/: BENCHMARK_SUMMARY.md  README.md
validation/results/edb/: BENCHMARK_SUMMARY.md  summary.json
validation/results/mitdb_python_only/: mitdb_100.json  mitdb_101.json  mitdb_102.json  mitdb_103.json  mitdb_104.json  mitdb_105.json  mitdb_106.json  mitdb_107.json  mitdb_108.json  mitdb_109.json  mitdb_111.json  mitdb_112.json  mitdb_113.json  mitdb_114.json  mitdb_115.json  mitdb_116.json  mitdb_117.json  mitdb_118.json  (+32 more)
validation/runbooks/: RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_GATE_A.md  RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_GATE_B.md  RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_GATE_C.md  RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_GATE_D.md  RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_GATE_E.md  RUNBOOK_BIO_EXTERNAL_BASELINE_FIDELITY_MASTER.md  RUNBOOK_BIO_WAVE1_MASTER.md  RUNBOOK_BIO_WAVE1_PHASE_0.md  RUNBOOK_BIO_WAVE1_PHASE_1.md  RUNBOOK_BIO_WAVE1_PHASE_2.md  RUNBOOK_BIO_WAVE1_PHASE_3.md  RUNBOOK_BIO_WAVE1_PHASE_4.md  RUNBOOK_BIO_WAVE1_PHASE_5.md  RUNBOOK_BIO_WAVE1_PHASE_6.md  RUNBOOK_BIO_WAVE2_MASTER.md  RUNBOOK_BIO_WAVE2_PHASE_0.md  RUNBOOK_BIO_WAVE2_PHASE_1.md  RUNBOOK_BIO_WAVE2_PHASE_2.md  RUNBOOK_BIO_WAVE2_PHASE_3.md  RUNBOOK_BIO_WAVE2_PHASE_4.md  RUNBOOK_BIO_WAVE2_PHASE_5.md  RUNBOOK_BIO_WAVE2_PHASE_6.md  RUNBOOK_BIO_WEARABLE_APPENDIX_RESOURCES.md  RUNBOOK_BIO_WEARABLE_GATE_A.md  RUNBOOK_BIO_WEARABLE_GATE_B.md  RUNBOOK_BIO_WEARABLE_GATE_C.md  RUNBOOK_BIO_WEARABLE_GATE_D.md  RUNBOOK_BIO_WEARABLE_GATE_E.md  RUNBOOK_BIO_WEARABLE_GATE_F_CLOSURE_2026-02-21.md  RUNBOOK_BIO_WEARABLE_MASTER.md
(+224 files in other folders)
