[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-bio"
version = "0.2.0"
description = "Deterministic 8-primitive biosignal codec with smell/taste multimodal extensions."
authors = [{name = "Zer0pa"}]
requires-python = ">=3.10"
readme = "README.md"
license = "LicenseRef-Zer0pa-SAL-6.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
validation = [
    "matplotlib>=3.7",
    "neurokit2>=0.2.12",
    "scipy>=1.11",
    "wfdb>=4.1",
]
bioeeg = [
    "mne>=1.8",
    "pyedflib>=0.1.42",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.6",
]
observe = [
    "comet-ml>=3.35",
]

[project.scripts]
zpe-bio = "zpe_bio.cli:main"

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Bio"
Documentation = "https://github.com/Zer0pa/ZPE-Bio/tree/main/docs"
Repository = "https://github.com/Zer0pa/ZPE-Bio"
Changelog = "https://github.com/Zer0pa/ZPE-Bio/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["zpe_bio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py310"
line-length = 100
