[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-bio"
version = "0.2.0"
description = "Deterministic 8-primitive biosignal codec with smell/taste multimodal extensions."
requires-python = ">=3.10"
readme = "README.md"
license = "LicenseRef-Zer0pa-SAL-7.0"
authors = [
    {name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"},
]
keywords = [
    "biosignal compression",
    "ECG",
    "deterministic codec",
    "medical waveform",
    "PhysioNet",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy>=1.24,<2.0",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Bio"
Documentation = "https://github.com/Zer0pa/ZPE-Bio#readme"
Repository = "https://github.com/Zer0pa/ZPE-Bio"
Issues = "https://github.com/Zer0pa/ZPE-Bio/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Bio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
validation = [
    "matplotlib>=3.7",
    "neurokit2>=0.2.12",
    "scipy>=1.11",
    "wfdb>=4.1",
]
bioeeg = [
    "mne>=1.8",
    "pyedflib>=0.1.42",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.6",
]
observe = [
    "comet-ml>=3.35",
]

[project.scripts]
zpe-bio = "zpe_bio.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["zpe_bio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py310"
line-length = 100
