[package]
name = "zpe-bio-nrf5340"
version = "0.1.0"
edition = "2021"

[dependencies]
zpe-bio-codec = { path = "../../core/rust", default-features = false, features = ["embedded"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"

[profile.release]
debug = 2
lto = true
opt-level = "z"
codegen-units = 1
